# forceps_handover

./: README.md  dat.txt  pyproject.toml
config/: settings.csv
forceps_handover/FileIO/: FileIO.py
forceps_handover/OptiTrack/: NatNetClient.py  OptiTrackStreaming.py
forceps_handover/Participant/: ParticipantMotion.py  lstm_predictor.py
forceps_handover/Processor/: Processor.py
forceps_handover/Recorder/: DataRecord.py  UDPReceive.py
forceps_handover/Robot/: CAMotion.py  xArmTransform.py
